tests/config_ignore/config_ignore.exp
Error ---------------------------------------------------------- dir/foo.js:3:17

Error: dir/foo.js:3
  3: var x: number = "string"; // Error string ~> number
                     ^^^^^^^^ Cannot assign `"string"` to `x` because string [1] is incompatible with number [2].
  References:
    3: var x: number = "string"; // Error string ~> number
                       ^^^^^^^^ [1]: string
    3: var x: number = "string"; // Error string ~> number
              ^^^^^^ [2]: number


Found 1 error
